--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,7 +19,7 @@
         min-width: fit-content;
         margin-bottom: 8px;
     }
-    .post {
+    .documentItem {
         min-width: 200px;
         margin-bottom: 8px;
         margin-left: 6px;
@@ -29,10 +29,7 @@
     }
 }
 @media (max-width: 1024px) {
-    .post {
-        min-width: 250px;
-        max-width: 250px;
-    }
+    
 }
 @media (min-width: 1024px) {
     .content-itemDocument {
