Server: Fixed Update User

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -69,3 +69,6 @@ body {
 .ck-editor__editable {
     min-height: 600px;
 }
+.documentItem:active:not(:has(svg:hover)) {
+    transform: scale(0.9);
+}
